Initial commit, Domoticz USB connected P1 smart meter.

--- a/settings/index.html
+++ b/settings/index.html
@@ -6,7 +6,7 @@
    </head>
     <body>
         <h1 data-i18n="settings.app.title"></h1>
-        <form id="smile">
+        <form id="domoticzP1">
         </form>
         <div>
         	<button type="button" class="right" id="button_getlog" onclick="showLogs()" data-i18n="settings.app.getlogs">Get Logs</button>
